typescript/checker/tests/conformance/Symbols/ES5SymbolProperty3.ts.stderr
error: NonSymbolTypedFieldFromSymbol {
    span: Span {
        lo: BytePos(
            52,
        ),
        hi: BytePos(
            67,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/Symbols/ES5SymbolProperty3.ts:5:6
  |
5 |     [Symbol.iterator]() { }
  |      ^^^^^^^^^^^^^^^

